--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissor">Scissor</button>
+    </div>
+
+    <div id="result">
+        <ul>
+            <li id="player-score">Player score:</li>
+            <li id="computer-score">Computer-score:</li>
+            <li id="round-result">Result:</li>
+            <li id="final-result"></li>
+        </ul>
+    </div>
+
     <script src="/script.js"></script>
 </body>
 </html>
