--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Rock Paper Scissor</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
     <div class="content">
@@ -16,7 +16,7 @@
         <div id="buttons">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
-            <button id="scissor">Scissor</button>
+            <button id="scissors">Scissors</button>
         </div>
        
         <div class="display-hands">
